[gd_scene load_steps=3 format=3 uid="uid://bvomgo8gg2nge"]

[ext_resource type="Script" uid="uid://dhtlqy8kdtcrq" path="res://editor_main_scene.gd" id="1_swu64"]
[ext_resource type="Theme" uid="uid://bfjliu6e24osx" path="res://editor_theme.tres" id="1_y4ppj"]

[node name="EditorMainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y4ppj")
script = ExtResource("1_swu64")

[node name="Main" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DirInfo" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="SaveData" type="Button" parent="Main/DirInfo"]
layout_mode = 2
text = "save changes"

[node name="ChangeDirButton" type="Button" parent="Main/DirInfo"]
layout_mode = 2
text = "change working directory"

[node name="DirName" type="Label" parent="Main/DirInfo"]
layout_mode = 2
text = "cwd: lorem ipsum\\dolor sit amet"

[node name="RestoreSession" type="Button" parent="Main/DirInfo"]
layout_mode = 2
text = "save changes"

[node name="OpenUserdata" type="Button" parent="Main/DirInfo"]
layout_mode = 2
text = "open backups and logs folder"

[node name="CWDInfo" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="FileCount" type="Label" parent="Main/CWDInfo"]
layout_mode = 2
text = "Total CSVs: 1000"

[node name="KeyCount" type="Label" parent="Main/CWDInfo"]
layout_mode = 2
text = "Total string keys: 1000"

[node name="UniqueL10Ns" type="Label" parent="Main/CWDInfo"]
layout_mode = 2
text = "Strings missing one or more localizations: 0"

[node name="KeySelect" type="HBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KeyFilter" type="LineEdit" parent="Main/KeySelect"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "filter"

[node name="KeyList" type="ItemList" parent="Main/KeySelect"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
max_columns = 0
same_column_width = true
item_0/text = "item"
item_1/text = "item2"

[node name="FileInfo" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="AddFile" type="Button" parent="Main/FileInfo"]
layout_mode = 2
text = "add file"

[node name="CurrenFileLabel" type="Label" parent="Main/FileInfo"]
layout_mode = 2
text = "current file:"

[node name="CurrentFile" type="OptionButton" parent="Main/FileInfo"]
layout_mode = 2

[node name="KeyCount" type="Label" parent="Main/FileInfo"]
layout_mode = 2
text = "string keys: 10"

[node name="KeyInfo" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="AddNewKey" type="Button" parent="Main/KeyInfo"]
layout_mode = 2
text = "add new key"

[node name="RenameKey" type="Button" parent="Main/KeyInfo"]
layout_mode = 2
text = "rename key"

[node name="KeyEditLabel" type="Label" parent="Main/KeyInfo"]
layout_mode = 2
text = "change key:"

[node name="KeyEdit" type="LineEdit" parent="Main/KeyInfo"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "key edit"
expand_to_text_length = true

[node name="Warnings" type="Label" parent="Main/KeyInfo"]
visible = false
layout_mode = 2
text = "warnings: none"

[node name="LocaleInfo" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="AddNewLocalization" type="Button" parent="Main/LocaleInfo"]
layout_mode = 2
text = "add new localization"

[node name="LocaleEdit" type="LineEdit" parent="Main/LocaleInfo"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "new locale"
expand_to_text_length = true

[node name="Edit" type="TabContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 1

[node name="Localization" type="VBoxContainer" parent="Main/Edit"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="DisplayOther" type="CheckBox" parent="Main/Edit/Localization"]
layout_mode = 2
text = "Edit side by side"

[node name="EditFields" type="HBoxContainer" parent="Main/Edit/Localization"]
layout_mode = 2
size_flags_vertical = 3

[node name="Locale" type="OptionButton" parent="Main/Edit/Localization/EditFields"]
layout_mode = 2
size_flags_vertical = 0
selected = 0
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "en"
popup/item_0/id = 0
popup/item_1/text = "ru"
popup/item_1/id = 1

[node name="Translation" type="TextEdit" parent="Main/Edit/Localization/EditFields"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "edit text"
wrap_mode = 1
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="OtherLocale" type="OptionButton" parent="Main/Edit/Localization/EditFields"]
layout_mode = 2
size_flags_vertical = 0
selected = 0
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "en"
popup/item_0/id = 0
popup/item_1/text = "ru"
popup/item_1/id = 1

[node name="OtherTranslation" type="TextEdit" parent="Main/Edit/Localization/EditFields"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "edit text"
wrap_mode = 1
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="Files" type="HBoxContainer" parent="Main/Edit"]
layout_mode = 2
size_flags_vertical = 3
metadata/_tab_index = 1

[node name="Info" type="VBoxContainer" parent="Main/Edit/Files"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Provided" type="Label" parent="Main/Edit/Files/Info"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "present locales: en, ru"
autowrap_mode = 3

[node name="Missing" type="Label" parent="Main/Edit/Files/Info"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "missing: none"
autowrap_mode = 3

[node name="Reset" type="Button" parent="Main/Edit/Files/Info"]
layout_mode = 2
text = "Reset"

[node name="Apply" type="Button" parent="Main/Edit/Files/Info"]
layout_mode = 2
text = "Apply
"

[node name="FileList" type="ItemList" parent="Main/Edit/Files"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
select_mode = 2
item_count = 2
max_columns = 0
same_column_width = true
item_0/text = "item"
item_1/text = "item2"

[node name="Messages" type="ScrollContainer" parent="Main"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="MessagesContainer" type="HBoxContainer" parent="Main/Messages"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50
alignment = 2
